2006-09-03  Stefan Jahn  <stefan@lkcc.org>

	* scan_mdl.l, parse_mdl.y: Implemented many more of the MDL
	grammar and syntax which I wasn't aware before.

	* dataset.cpp: Fixed a bug when deleting the last variable or
	dependency in a dataset.

	* check_mdl.cpp: Emit warnings when variables cannot be
	resolved (no equation solver implemented).
	Consider list of root LINK's.

2006-08-19  Stefan Jahn  <stefan@lkcc.org>

	* qucsdefs.h (qucs_definition_available): Added new
	optional properties 'Td', 'Tr' and 'Tf' for rectangular current
	and voltage sources.

	* parse_mdl.y: Free'ing unused scanner items in the parser.

	* dataset.cpp: New function delVariable() implemented.

	* check_mdl.cpp: TODO list done: release internal data
	structures, checking dependency list of XFORM's checking
	SYNC sweeps, handling LIST sweeps correctly.

2006-08-17  Stefan Jahn  <stefan@lkcc.org>

	* valuelist.cpp: Added new function which can be used to
	concatenate two valuelists.

	* scan_mdl.l, parse_mdl.y, check_mdl.cpp: Implemented scanner,
	parser and checker for the IC-CAP MDL file format.  The checker
	works, but there is yet something to do...

	* dataset.cpp (load_mdl): Included a static function to load
	a IC-CAP MDL file as an dataset.

2006-08-08  Stefan Jahn  <stefan@lkcc.org>

	* parasweep.cpp: Fixed a bug occuring with multi-dimensional
	s-parameter sweeps which require a prior dc analysis.  Now the
	data dependency tracking works again.

	* net.cpp: New function returning the children in the last
	order sweep.

	* evaluate.cpp (__RETV): Using an extra macro for returning
	default values (non-argument macros).  Some compilers complained
	about these (FreeBSD4).

2006-07-23  Stefan Jahn  <stefan@lkcc.org>

	* nasolution.h (class nasolution): Implemented a storage
	class for a nodal analysis solution.  Used by the transient
	solver.

	* vector.cpp: Each two-vector operation, e.g. +, -, polar, *,
	/, %, arctan2 and pow can now be performed on vectors with